--- a/src/layouts/Gerente/Envios/Minorista/estilo.css
+++ b/src/layouts/Gerente/Envios/Minorista/estilo.css
@@ -121,6 +121,7 @@ main .Table--Container th{
 main .Table--Container td{
     text-align: center;
     padding: 5px 30px;
+    font-size: 1.1em;
 }
 main .Table--Container tbody tr{
     transition: .1s linear;
