--- a/src/layouts/Gerente/Inventario/estilo.css
+++ b/src/layouts/Gerente/Inventario/estilo.css
@@ -97,25 +97,30 @@ main .Table--inventario table{
     border: 2px solid #aaa;
     border-radius: 5px;
     padding: 5px 5px;
+    border-top: none;
+    border-collapse: collapse;
 }
 main .Table--inventario table caption{
     border: 2px solid #aaa;
+    border-bottom: none;
     border-radius: 5px;
-    padding: 5px;
+    padding: 8px;
     font-weight: 600;
     font-size: 1.4em;
     text-transform: capitalize;
     letter-spacing: 1px;
 }
 main .Table--inventario table th{
-    padding: 5px 5px;
-    border: 1px solid #aaa;
+    padding: 3px 5px;
+    border-top: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
     font-weight: 600;
 }
 main .Table--inventario table td{
     padding: 5px 30px;
     text-align: center;
     font-weight: 500;
+    font-size: 1.1em;
 }
 main .Table--inventario table tbody tr{
     transition: .1s linear;
