--- a/src/layouts/Gerente/Login/index.html
+++ b/src/layouts/Gerente/Login/index.html
@@ -30,8 +30,8 @@
                     </div>
                 </div>
                 <div class="Buttons">
-                    <a href="Formulario/index.html" id="link"><input class="Submit--From" value="Ingresar"></a>
-                    <a href="Crear/Index.html"><input class="Submit--From" value="Crear Cuenta"></a>
+                    <a href="../../Gerente/Main/Main.html" id="link"><input class="Submit--From" value="Ingresar"></a>
+                    <a href="../Register/Index.html"><input class="Submit--From" value="Crear Cuenta"></a>
                 </div>
             </form>
         </div>
