Acomodo algunas cosas del register y login

--- a/src/layouts/Gerente/Register/Index.html
+++ b/src/layouts/Gerente/Register/Index.html
@@ -26,7 +26,7 @@
                     <label for="Apellido">Apellido</label>
                     <div class="Container">
                         <input type="text"  placeholder="Ingrese su Apellido" required id="Apellido">
-                        <img src="" alt="Nombre">
+                        <img src="../../../../public/images/icons/Pencil--white.png" alt="Nombre">
                     </div>
                 </div>
                 <div class="Input--container">
