Se arregla el js del register

--- a/src/layouts/Login/index.html
+++ b/src/layouts/Login/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="Content">
             <div class="Login__Title">
-                <img src="../../../../public/images/Logo/Logo.png" alt="Logo">
+                <img src="../../../public/images/Logo/Logo.png" alt="Logo">
                 <h2>Login</h2>
             </div>
             <form class="Form__page" action="">
@@ -19,14 +19,14 @@
                     <label for="Email">Email</label>
                     <div class="Container">
                         <input type="email"  placeholder="Ingrese su email" required id="Email">
-                        <img src="../../../../public/images/icons/person.png" alt="Logo">
+                        <img src="../../../public/images/icons/person.png" alt="Logo">
                     </div>
                 </div>
                 <div class="Input--container">
                     <label for="Contraseña">Contraseña</label>
                     <div class="Container">
                         <input type="password"  placeholder="Ingrese su contraseña" required id="Contraseña">
-                        <img src="../../../../public/images/icons/lock.png" alt="Logo">
+                        <img src="../../../public/images/icons/lock.png" alt="Logo">
                     </div>
                 </div>
                 <div class="Buttons">
