--- a/src/layouts/Register/Index.html
+++ b/src/layouts/Register/Index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="Content">
             <div class="Login__Title">
-                <img src="../../../../public/images/Logo/Logo.png" alt="Logo">
+                <img src="../../../public/images/Logo/Logo.png" alt="Logo">
                 <h2>Bienvenido a Drinkers</h2>
             </div>
             <form class="Form__page">
@@ -19,33 +19,33 @@
                     <label for="Nombre">Nombre</label>
                     <div class="Container">
                         <input type="text"  placeholder="Ingrese su Nombre" required id="Nombre">
-                        <img src="../../../../public/images/icons/Pencil--white.png" alt="Nombre">
+                        <img src="../../../public/images/icons/Pencil--white.png" alt="Nombre">
                     </div>
                 </div>
                 <div class="Input--container">
                     <label for="Apellido">Apellido</label>
                     <div class="Container">
                         <input type="text"  placeholder="Ingrese su Apellido" required id="Apellido">
-                        <img src="../../../../public/images/icons/Pencil--white.png" alt="Nombre">
+                        <img src="../../../public/images/icons/Pencil--white.png" alt="Nombre">
                     </div>
                 </div>
                 <div class="Input--container">
                     <label for="Email">Email</label>
                     <div class="Container">
                         <input type="email"  placeholder="Ingrese su correo" required id="Correo">
-                        <img src="../../../../public/images/icons/person.png" alt="Nombre">
+                        <img src="../../../public/images/icons/person.png" alt="Nombre">
                     </div>
                 </div>
                 <div class="Input--container">
                     <label for="password">Contraseña</label>
                     <div class="Container">
                         <input type="password"  placeholder="Ingrese su correo" required id="Password" required maxlength="8">
-                        <img src="../../../../public/images/icons/lock.png" alt="Nombre">
+                        <img src="../../../public/images/icons/lock.png" alt="Nombre">
                     </div>
                 </div>
                 <div class="Buttons">
-                    <a href="../../Gerente/Main/Main.html" id="link"><input class="Submit--From" value="Crear Cuenta"></a>
-                    <a href="../../Gerente/Login/index.html"><input class="Submit--From" value="Volver al inicio"></a>
+                    <a href="../Gerente/Main/Main.html" id="link"><input class="Submit--From"  value="Crear Cuenta"></a>
+                    <a href="../Login/index.html"><input class="Submit--From inicio" value="Volver al inicio"></a>
                 </div>
             </form>
         </div>
