--- a/src/layouts/Register/estilo.css
+++ b/src/layouts/Register/estilo.css
@@ -8,7 +8,7 @@
 header{
     width: 100%;
     height: 100vh;
-    background: url(../../../../public/images/Logo/Fondo.png) no-repeat;
+    background: url(../../../public/images/Logo/Fondo.png) no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
