--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -40,7 +41,32 @@
     </main>
 
     <footer>
-        
+        <h3>Atención al cliente</h3>
+        <ul>
+            <li>0000-000000000</li>
+            <li>Hora de ATC: 24h</li>
+            <li>Horarios de entrega: Valencia, Naguanagua y San Diego: 24h</li>
+            <li>Envío en menos de 3 horas gratis el mismo día</li>
+            <li>¿Quienes somos?</li>
+            <li>Preguntas Frecuentes</li>
+            <li>Zona de repartos</li>
+            <li>Términos y Condiciones</li>
+            <li>Políticas de Privación</li>
+            <li>Políticas de Devolución</li>
+        </ul>
+
+        <section>
+            <section>
+                <div></div>
+                <div></div>
+                <div></div>
+            </section>
+            <article>
+                <img src="../../../../public/images/Logo/logo-landing.png">
+                <h2>Drinkers</h2>
+            </article>
+        </section>
+
     </footer>
 </body>
 </html>
