--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -17,8 +17,9 @@
             <img src="../../../../public/images/Logo/logo-landing.png">
             <input type="search">
             <section>
-                <img src="../../../../public/images/icons/store.svg">
                 <button>Iniciar sesión</button>
+                <div>0</div>
+                <img src="../../../../public/images/icons/store.svg">
             </section>
         </section>
         <nav>
@@ -35,6 +36,10 @@
             </ul>
         </nav>
     </header>
+
+    <aside>
+
+    </aside>
 
     <main>
 
@@ -68,5 +73,9 @@
         </section>
 
     </footer>
+
+    <script>
+
+    </script>
 </body>
 </html>
