--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -38,7 +38,14 @@
     </header>
 
     <aside>
-
+        <div>
+            <img src="../../../../public/images/icons/Trash.svg" alt="">
+            <span>Vaciar Carrito</span>
+        </div>
+        <ul>
+            <li></li>
+        </ul>
+        <section></section>
     </aside>
 
     <main>
