--- a/src/layouts/Landing/Template/header.css
+++ b/src/layouts/Landing/Template/header.css
@@ -12,6 +12,7 @@ body{
     margin: 0;
     font-family: 'Montserrat';
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 header{
@@ -140,6 +141,49 @@ aside{
     background-color: var(--white);
     z-index: 20;
     transition: right 0.3s linear;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+aside div{
+    cursor: pointer;
+    width: 20vmin;
+    height: 5vmin;
+    border-radius: 10px;
+    border: solid 1px var(--cyan);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: small;
+    gap: 1vmin;
+    color: var(--blue);
+    margin-left: 2vmin;
+    transition: background-color 0.2s linear;
+}
+
+aside div:hover{
+    background-color: var(--cyan);
+}
+
+aside div span{
+    font-size: 2vmin;
+}
+
+aside div img{
+    width: 1.5vmax;
+    height: 1.5vmax;
+}
+
+aside ul{
+    list-style: none;
+    height: 60%;
+}
+
+aside section{
+    border-top: solid 0.5px var(--cyan);
+    height: 20%;
+    width: 100%;
 }
 
 main{
