--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -38,14 +38,25 @@
     </header>
 
     <aside>
-        <div>
+        <button>
             <img src="../../../../public/images/icons/Trash.svg" alt="">
             <span>Vaciar Carrito</span>
-        </div>
+        </button>
         <ul>
             <li></li>
+            <li></li>
+            <li></li>
         </ul>
-        <section></section>
+        <section>
+            <div>
+                <span>Tasa: 00.00</span>
+                <span>Total($):00.00</span>
+                <span>Total(Bs): 0 000.00</span>
+            </div>
+            <button>
+                <span>Finalizar Compra</span>
+            </button>
+        </section>
     </aside>
 
     <main>
