--- a/src/routes/auth/register.ejs
+++ b/src/routes/auth/register.ejs
@@ -1,154 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Design by foolishdeveloper.com -->
-    <title>Glassmorphism login Form Tutorial in html css</title>
- 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-    <!--Stylesheet-->
-    <style media="screen">
-      *,
-*:before,
-*:after{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    background-color: #080710;
-}
-.background{
-    width: 430px;
-    height: 520px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    left: 50%;
-    top: 50%;
-}
-.background .shape{
-    height: 200px;
-    width: 200px;
-    position: absolute;
-    border-radius: 50%;
-}
-.shape:first-child{
-    background: linear-gradient(
-        #1845ad,
-        #23a2f6
-    );
-    left: -80px;
-    top: -80px;
-}
-.shape:last-child{
-    background: linear-gradient(
-        to right,
-        #ff512f,
-        #f09819
-    );
-    right: -30px;
-    bottom: -80px;
-}
-form{
-    height: 520px;
-    width: 400px;
-    background-color: rgba(255,255,255,0.13);
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    border: 2px solid rgba(255,255,255,0.1);
-    box-shadow: 0 0 40px rgba(8,7,16,0.6);
-    padding: 50px 35px;
-}
-form *{
-    font-family: 'Poppins',sans-serif;
-    color: #ffffff;
-    letter-spacing: 0.5px;
-    outline: none;
-    border: none;
-}
-form h3{
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-}
-
-label{
-    display: block;
-    margin-top: 30px;
-    font-size: 16px;
-    font-weight: 500;
-}
-input{
-    display: block;
-    height: 50px;
-    width: 100%;
-    background-color: rgba(255,255,255,0.07);
-    border-radius: 3px;
-    padding: 0 10px;
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 300;
-}
-::placeholder{
-    color: #e5e5e5;
-}
-button{
-    margin-top: 50px;
-    width: 100%;
-    background-color: #ffffff;
-    color: #080710;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.social{
-  margin-top: 30px;
-  display: flex;
-}
-.social div{
-  background: red;
-  width: 150px;
-  border-radius: 3px;
-  padding: 5px 10px 10px 5px;
-  background-color: rgba(255,255,255,0.27);
-  color: #eaf0fb;
-  text-align: center;
-}
-.social div:hover{
-  background-color: rgba(255,255,255,0.47);
-}
-.social .fb{
-  margin-left: 25px;
-}
-.social i{
-  margin-right: 4px;
-}
-
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login || Drinkers</title>
+    <link rel="stylesheet" href="/public/CSS/Register/estilo.css">   
+    <link rel="stylesheet" href="../../styles/font/fonts.css">
 </head>
 <body>
-    <div class="background">
-        <div class="shape"></div>
-        <div class="shape"></div>
-    </div>
-    <form>
-        <h3>Register</h3>
-
-        <label for="username">Username</label>
-        <input type="text" placeholder="Email" id="username">
-
-        <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password">
-
-        <button>Register</button>
-    </form>
+    <header>
+        <div class="Content">
+            <div class="Login__Title">
+                <img src="../../../public/images/Logo/Logo.png" alt="Logo">
+                <h2>Bienvenido a Drinkers</h2>
+            </div>
+            <form class="Form__page">
+                <div class="Input--container">
+                    <label for="Nombre">Nombre</label>
+                    <div class="Container">
+                        <input type="text"  placeholder="Ingrese su Nombre" required id="Nombre">
+                        <img src="../../../public/images/icons/Pencil--white.png" alt="Nombre">
+                    </div>
+                </div>
+                <div class="Input--container">
+                    <label for="Apellido">Apellido</label>
+                    <div class="Container">
+                        <input type="text"  placeholder="Ingrese su Apellido" required id="Apellido">
+                        <img src="../../../public/images/icons/Pencil--white.png" alt="Nombre">
+                    </div>
+                </div>
+                <div class="Input--container">
+                    <label for="Email">Email</label>
+                    <div class="Container">
+                        <input type="email"  placeholder="Ingrese su correo" required id="Correo">
+                        <img src="../../../public/images/icons/person.png" alt="Nombre">
+                    </div>
+                </div>
+                <div class="Input--container">
+                    <label for="password">Contraseña</label>
+                    <div class="Container">
+                        <input type="password"  placeholder="Ingrese su correo" required id="Password" required maxlength="8">
+                        <img src="../../../public/images/icons/lock.png" alt="Nombre">
+                    </div>
+                </div>
+                <div class="Buttons">
+                    <a href="../Gerente/Main/Main.html" id="link"><input class="Submit--From"  value="Crear Cuenta"></a>
+                    <a href="../Login/index.html"><input class="Submit--From inicio" value="Volver al inicio"></a>
+                </div>
+            </form>
+        </div>
+    </header>
 </body>
 </html>
