--- a/src/routes/auth/login.ejs
+++ b/src/routes/auth/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login || Drinkers</title>
-    <link rel="stylesheet" href="CSS/Login/styles.css" type="text/css">   
+    <link rel="stylesheet" href="/public/CSS/Login/styles.css">
 </head>
 <body>
     <header>
