Se agrega todas las modificaciones de las views

--- a/src/layouts/Gerente/Avisos/Avisos.html
+++ b/src/layouts/Gerente/Avisos/Avisos.html
@@ -16,6 +16,9 @@
     </header>
     <nav class="Navigator--bar">
         <ul class="Navigator--bar List">
+            <a href="../Main/Main.html" class="Link">
+                <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/Home.png" title="Home"></Li>
+            </a>
             <a href="../Inventario/Inventario.html" class="Link">
                 <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
             </a>
@@ -28,8 +31,8 @@
             <a href="../Envios/Minorista/Minorista.html" class="Link">
                 <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
             </a>
-            <a href="../Main/Main.html" class="Link">
-                <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Home.png" title="Avisos"></Li>
+            <a href="Avisos.html" class="Link">
+                <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
             </a>
         </ul>
     </nav>
