--- a/src/layouts/Gerente/Envios/Minorista/Minorista.html
+++ b/src/layouts/Gerente/Envios/Minorista/Minorista.html
@@ -16,6 +16,9 @@
     </header>
     <nav class="Navigator--bar">
         <ul class="Navigator--bar List">
+            <a href="../Main/Main.html" class="Link">
+                <Li class="List--cont"><img alt="Proveedores" src="../../../../../public/images/icons/Home.png" title="Home"></Li>
+            </a>
             <a href="../../Inventario/Inventario.html" class="Link">
                 <Li class="List--cont"><img alt="Inventario" src="../../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
             </a>
@@ -25,8 +28,8 @@
             <a href="../../Proveedor/Proveedor.html" class="Link">
                 <Li class="List--cont"><img alt="Proveedores" src="../../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
             </a>
-            <a href="../../Main/Main.html" class="Link">
-                <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../../public/images/icons/Home.png" title="Envios/pedidos"></Li>
+            <a href="Minorista.html" class="Link">
+                <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
             </a>
             <a href="../../Avisos/Avisos.html" class="Link">
                 <Li class="List--cont"><img alt="Avisos" src="../../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
@@ -36,8 +39,10 @@
     <main>
         <section class="Content--page">
             <article class="input--Container">
-                <input type="search" placeholder="00000">
-                <img alt="Lupa" src="../../../../../public/images/icons/search.png">
+                <input type="search" placeholder="00000" id="Lupa">
+                <label for="Lupa">
+                    <img alt="Lupa" src="../../../../../public/images/icons/search.png" id="Lupa">
+                </label>
             </article>
             <article class="Minorista--Mayorista">
                 <div>
