--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -15,11 +15,14 @@
         </div>
         <nav class="Navigator--bar">
             <ul class="Navigator--bar List">
+                <a href="../Main/Main.html" class="Link">
+                    <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/Home.png" title="Home"></Li>
+                </a>
                 <a href="../Inventario/Inventario.html" class="Link">
                     <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
                 </a>
-                <a href="../Main/Main.html" class="Link">
-                    <Li class="List--cont"><img alt="Estadistica" src="../../../../public/images/icons/Home.png" title="Estadistica"></Li>
+                <a href="Estadistica.html" class="Link">
+                    <Li class="List--cont"><img alt="Estadistica" src="../../../../public/images/icons/Estadistica.png" title="Estadistica"></Li>
                 </a>
                 <a href="../Proveedor/Proveedor.html" class="Link">
                     <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
@@ -37,8 +40,10 @@
         <section class="Content">
             <article class="Table--Container">
                 <div class="Input--Container">
-                    <input type="search" placeholder="00000">
-                    <img src="../../../../public/images/icons/search.png" alt="Lupa">
+                    <input type="search" placeholder="00000" id="Lupa">
+                    <label for="Lupa">
+                        <img src="../../../../public/images/icons/search.png" alt="Lupa" id="Lupa">
+                    </label>
                 </div>
                 <div class="Table">
                     <table>
