--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -17,7 +17,10 @@
     <nav class="Navigator--bar">
         <ul class="Navigator--bar List">
             <a href="../Main/Main.html" class="Link">
-                <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Home.png" title="Inventario"></Li>
+                <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/Home.png" title="Home"></Li>
+            </a>
+            <a href="Inventario.html" class="Link">
+                <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
             </a>
             <a href="../Estadistica/Estadistica.html" class="Link">
                 <Li class="List--cont"><img alt="Estadistica" src="../../../../public/images/icons/Estadistica.png" title="Estadistica"></Li>
@@ -37,8 +40,10 @@
         <section class="Content">
             <form class="Inputs--seleccionados">
                 <div class="Input--Container">
-                    <input type="search" placeholder="Buscar producto">
-                    <img src="../../../../public/images/icons/Search.png" alt="Lupa">
+                    <input type="search" placeholder="Buscar producto" id="Lupa">
+                    <label for="Lupa">
+                        <img src="../../../../public/images/icons/Search.png" alt="Lupa" id="Lupa">
+                    </label>
                 </div>
                 <div class="Input--Container">
                     <select>
