--- a/src/layouts/Register/estilo.css
+++ b/src/layouts/Register/estilo.css
@@ -61,6 +61,7 @@ header .Content .Form__page .Input--container{
 header .Content .Form__page .Input--container label{
     display: block;
     margin: 2px;
+    padding-left: 10px;
     font-size: 0.9em;
     letter-spacing: 2px;
     color: #ffffff;
@@ -79,7 +80,7 @@ header .Content .Form__page .Input--container .Container input{
     border: none;
     outline: none;
     background-color: transparent;
-    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
     border-right: 1px solid #fff;
     border-radius: 5px;
     color: #fff;
