--- a/src/routes/auth/login.ejs
+++ b/src/routes/auth/login.ejs
@@ -3,37 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login || Drinkers</title>
-    <link rel="stylesheet" href="/public/CSS/Login/styles.css">
+    <title>Drinkers</title>
+    <style>
+        form{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        div{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 10px;
+        }
+        input{
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button{
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        label{
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="Content">
-            <div class="Login__Title">
-                <img src="../../../public/images/Logo/Logo.png" alt="Logo">
-                <h2>Login</h2>
-            </div>
-            <form class="Form__page" action="">
-                <div class="Input--container">
-                    <label for="Email">Email</label>
-                    <div class="Container">
-                        <input type="email"  placeholder="Ingrese su email" required id="Email">
-                        <img src="../../../public/images/icons/person.png" alt="Logo">
-                    </div>
-                </div>
-                <div class="Input--container">
-                    <label for="Contraseña">Contraseña</label>
-                    <div class="Container">
-                        <input type="password"  placeholder="Ingrese su contraseña" required id="Contraseña">
-                        <img src="../../../public/images/icons/lock.png" alt="Logo">
-                    </div>
-                </div>
-                <div class="Buttons">
-                    <a href="../../Gerente/Main/Main.html" id="link"><input class="Submit--From" value="Ingresar"></a>
-                    <a href="../Register/Index.html"><input class="Submit--From" value="Crear Cuenta"></a>
-                </div>
-            </form>
+    <form>
+        <div>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email">
         </div>
-    </header>
+        <div>
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
+        </div>
+        <button type="submit">Login</button>
+    </form>
 </body>
 </html>
