--- a/src/routes/auth/login.ejs
+++ b/src/routes/auth/login.ejs
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login || Drinkers</title>
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="../font/fonts.css">
+    <link rel="stylesheet" href="/css/auth/login.css">
 </head>
 <body>
     <header>
         <div class="Content">
             <div class="Login__Title">
-                <img src="../../../public/images/Logo/Logo.png" alt="Logo">
+                <img src="/images/Logo/Logo.png" alt="Logo">
                 <h2>Login</h2>
             </div>
             <form class="Form__page" action="">
@@ -19,14 +18,14 @@
                     <label for="Email">Email</label>
                     <div class="Container">
                         <input type="email"  placeholder="Ingrese su email" required id="Email">
-                        <img src="../../../public/images/icons/person.png" alt="Logo">
+                        <img src="/images/icons/person.png" alt="Logo">
                     </div>
                 </div>
                 <div class="Input--container">
                     <label for="Contraseña">Contraseña</label>
                     <div class="Container">
                         <input type="password"  placeholder="Ingrese su contraseña" required id="Contraseña">
-                        <img src="../../../public/images/icons/lock.png" alt="Logo">
+                        <img src="/images/icons/lock.png" alt="Logo">
                     </div>
                 </div>
                 <div class="Buttons">
