Creando Carpetas Staticas(Public) - Layout to Routes

--- a/src/routes/auth/login.ejs
+++ b/src/routes/auth/login.ejs
@@ -29,12 +29,12 @@
                     </div>
                 </div>
                 <div class="Buttons">
-                    <a href="../../Gerente/Main/Main.html" id="link"><input class="Submit--From" value="Ingresar"></a>
-                    <a href="../Register/Index.html"><input class="Submit--From" value="Crear Cuenta"></a>
+                    <a href="/dashboard" id="link"><input class="Submit--From" value="Ingresar"></a>
+                    <a href="/register"><input class="Submit--From" value="Crear Cuenta"></a>
                 </div>
             </form>
         </div>
     </header>
+    <script src="/js/auth/login.js"></script>
 </body>
-<script src="app.js"></script>
 </html>
