--- a/src/routes/auth/register.ejs
+++ b/src/routes/auth/register.ejs
@@ -4,48 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login || Drinkers</title>
-    <link rel="stylesheet" href="/public/CSS/Register/estilo.css">   
-    <link rel="stylesheet" href="../../styles/font/fonts.css">
+    <link rel="stylesheet" href="/css/auth/register.css">
 </head>
 <body>
     <header>
         <div class="Content">
             <div class="Login__Title">
-                <img src="../../../public/images/Logo/Logo.png" alt="Logo">
+                <img src="/images/Logo/Logo.png" alt="Logo">
                 <h2>Bienvenido a Drinkers</h2>
             </div>
-            <form class="Form__page">
+            <form class="Form__page" action="">
                 <div class="Input--container">
                     <label for="Nombre">Nombre</label>
                     <div class="Container">
                         <input type="text"  placeholder="Ingrese su Nombre" required id="Nombre">
-                        <img src="../../../public/images/icons/Pencil--white.png" alt="Nombre">
+                        <img src="/images/icons/Pencil--white.png" alt="Nombre">
                     </div>
                 </div>
                 <div class="Input--container">
                     <label for="Apellido">Apellido</label>
                     <div class="Container">
                         <input type="text"  placeholder="Ingrese su Apellido" required id="Apellido">
-                        <img src="../../../public/images/icons/Pencil--white.png" alt="Nombre">
+                        <img src="/images/icons/Pencil--white.png" alt="Nombre">
                     </div>
                 </div>
                 <div class="Input--container">
                     <label for="Email">Email</label>
                     <div class="Container">
                         <input type="email"  placeholder="Ingrese su correo" required id="Correo">
-                        <img src="../../../public/images/icons/person.png" alt="Nombre">
+                        <img src="/images/icons/person.png" alt="Nombre">
                     </div>
                 </div>
                 <div class="Input--container">
                     <label for="password">Contraseña</label>
                     <div class="Container">
                         <input type="password"  placeholder="Ingrese su correo" required id="Password" required maxlength="8">
-                        <img src="../../../public/images/icons/lock.png" alt="Nombre">
+                        <img src="/images/icons/lock.png" alt="Nombre">
                     </div>
                 </div>
                 <div class="Buttons">
-                    <a href="../Gerente/Main/Main.html" id="link"><input class="Submit--From"  value="Crear Cuenta"></a>
-                    <a href="../Login/index.html"><input class="Submit--From inicio" value="Volver al inicio"></a>
+                    <a href="/dashboard" id="link"><input class="Submit--From"  value="Crear Cuenta"></a>
+                    <a href="/"><input class="Submit--From inicio" value="Volver al inicio"></a>
                 </div>
             </form>
         </div>
