--- a/src/layouts/Landing/Template/header.css
+++ b/src/layouts/Landing/Template/header.css
@@ -192,6 +192,52 @@ aside ul li{
     border-radius: 5px;
     border: var(--black) solid 1px;
     flex: 0 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 4vmin;
+}
+
+aside ul li input[type=number]{
+    width: 4vmin;
+    height: 7vmin;
+    font-size: large;
+    background-color: var(--white);
+}
+
+aside ul li input[type=number]:focus{
+    outline: none;
+}
+
+aside ul li input[type=number]::-webkit-inner-spin-button{
+    scale: 1.3;
+    opacity: 1;
+}
+
+aside ul li img{
+    width: 9vmin;
+    height: 9vmin;
+    border: solid 2px black;
+    border-radius: 5px;
+}
+
+aside ul li div{
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+    height: 8vmin;
+    width: 28vmin;
+}
+
+aside ul li span{
+    font-weight: bold;
+    font-size: 3vmin;
+    padding: 0;
+}
+
+aside ul li p{
+    padding: 0;
+    margin: 0;
 }
 
 aside section{
@@ -213,6 +259,7 @@ aside section div{
 main{
     width: 100dvw;
     min-height: 100dvh;
+    padding-top: 15dvh;
 }
 
 footer{
